# stemcl

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile_macOS  Makefile_ubuntu  README.md  kernels.cl  stemcl.h
sample/benchmark/: Si-100-8k.xyz
sample/hilke/: FEM_seg-detct_analysis_tool_v01.s  README.md
sample/hilke/5000Kns-SW/: a-Si-100k-detektor5000Kns.json  runSTEMcl_new.sh
sample/hilke/5000Kns-SW/assets/: relax5000Kns-STEMcl.xyz
sample/hilke/5000Kns-SW/results/parameter/: synchronization.pgm
sample/hilke/5000Kns-SWV/: a-Si-100k-detektor5000Kns.json
sample/hilke/5000Kns-SWV/results/parameter/: relaxed-5000Kns-SWV-STEMcl.xyz
source/: helpers.c  helpers.h  kernels.h  stemcl.c
tools/: benchmark.sh  stringify_ocl.sh
